syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bowmeow.gateway.client"; // 올바른 패키지 경로 설정
option java_outer_classname = "UserProto";

service UserService {
  rpc GetUser (UserRequest) returns (UserResponse);
}

message UserRequest {
  string userId = 1;
}

message UserResponse {
  string userId = 1;
  string name = 2;
  string email = 3;
}
